# Baymax_Core_Algo

./: .env  .env.example  .gitignore  ALGO_WHITEPAPER.md  DEPLOYMENT.md  OPERATIONS.md  QUICKSTART.md  README.md  SYSTEM_DESIGN.md  audit_ml_regime.py  check_dhan_balance.py  check_hcl.py  check_infy.py  config.example.json  config.mean_reversion.json  config.reliance.json  config.supertrend.json  config_multi.json  diagnose_dhan_headers.py  diagnose_ws.py  dummy_data.csv  fetch_historical.py  full_system_test.py  generate_audit_data.py  live_tracker.py  param_grid.example.json  param_grid.json  production_audit_backtest.md  production_audit_grid.json  pyproject.toml  test_config.json  test_dhan_execution.py  test_dhan_socket_v2.py  test_grid.json  test_institutional_strats.py  test_multi_stock.py  test_regime_classifier.py  trading_runs.db-shm  trading_runs.db-wal  verify_dhan_mapping.py
sample_data/: audit_data.csv  bars.csv
tests/: test_advanced_strategy.py  test_analytics.py  test_atr_trailing_stop.py  test_dynamic_sizing.py  test_mtf_alignment.py  test_optimizer.py  test_prediction.py  test_regime_override.py  test_smoke.py  test_storage.py  test_velocity_exit.py
trading_system/: __init__.py  config.py  engine.py  main.py  models.py
trading_system/analytics/: __init__.py  backtest.py  optimizer.py  runner.py  walk_forward.py
trading_system/data/: aggregator.py  dhan_manager.py  dhan_socket.py  feed.py  resampler.py
trading_system/execution/: base.py  dhan.py  groww.py  paper.py
trading_system/ml/: regime.py
trading_system/portfolio/: __init__.py  (+1 more)
(+18 files in other folders)
